ma_schema_creator 0.2v

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -20,7 +20,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -32,11 +31,20 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
+		<dependency>
+		 <groupId>javax.servlet</groupId> 
+		 <artifactId>jstl</artifactId> 
+		 <version>1.2</version> 
+		 </dependency>
+		 <dependency>
+		  <groupId>taglibs</groupId>
+		   <artifactId>standard</artifactId>
+		    <version>1.1.2</version> 
+			</dependency>
 	</dependencies>
 	<build>
 		<plugins>
